<resources>
    <!--Main Activity-->
    <string name="app_name">NoteMe App</string>
    <string name="text_main_message">Welcome! Sign in to your account</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_main_login">Login</string>
    <string name="button_main_sign_up">Don\'t have an account? <b>Sign up</b></string>

    <!--Sign Up Activity-->
    <string name="text_sign_up_message">Hey! let\'s set up your account</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_go_back_to_login">Back</string>
    <string name="text_sign_up_terms">By signing up, you agree to our <b>terms and conditions</b></string>

    <!--My Profile Activity-->
    <string name="text_my_notes_profile">My Notes</string>
    <string name="button_go_back_general">Back</string>

    <!--Maps Activity-->
    <string name="title_activity_maps">Map</string>

    <!--Note Activity-->
    <string name="button_back_to_maps">Back to map</string>

    <!--New Note Activity-->
    <string name="text_new_note_title">Please fill out the information for your new note:</string>
    <string name="hint_new_note_name">Note Name</string>
    <string name="hint_new_note_description">Note Description</string>
    <string name="button_upload_image_from_gallery">Upload Photo</string>
    <string name="button_take_image_from_camer">Take Photo</string>
    <string name="button_create_note">Create Note</string>

    <!--MongoDB connection-->
    <string name="mongo_db_client_uri">mongodb://localhost:27017/signup</string>
</resources>